syntax = "proto3";

package patient;

option go_package= "github.com/EdoRguez/medical-system/patient-svc/pb";

service PatientService{
  rpc CreatePatient(CreatePatientRequest) returns (CreatePatientResponse);
}

message CreatePatientRequest{
  string firstName = 1;
  string lastName = 2;
}

message CreatePatientResponse{
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}